# dftfe

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeListsFluxGCC.txt  DEMO.txt  Doxyfile  INSTALL.txt  LICENSE  NOTICE  README  README.md  README.txt  READMEPrismsTraining.md  README_DETAILED.md  README_DETAILED.txt  _b_f_g_s_non_linear_solver_8h.html  _b_f_g_s_non_linear_solver_8h_source.html  _b_l_a_s_wrapper_8h.html  _b_l_a_s_wrapper_8h_source.html  _composite_data_8h.html  _composite_data_8h_source.html  _data_type_overloads_8h.html  _data_type_overloads_8h_source.html  _device_a_p_i_calls_8h.html  _device_a_p_i_calls_8h_source.html  _device_blas_wrapper_8h.html  _device_blas_wrapper_8h_source.html  _device_data_type_overloads_8cu_8h.html  _device_data_type_overloads_8cu_8h_source.html  _device_data_type_overloads_8h.html  _device_data_type_overloads_8h_source.html  _device_data_type_overloads_8hip_8h.html  _device_data_type_overloads_8hip_8h_source.html  _device_exceptions_8cu_8h.html  _device_exceptions_8cu_8h_source.html  _device_exceptions_8hip_8h.html  _device_exceptions_8hip_8h_source.html  _device_kernel_launcher_constants_8h.html  _device_kernel_launcher_constants_8h_source.html  (+514 more)
cmake/: FindDFTD3.cmake  FindDFTD4.cmake  FindELPA.cmake  FindNCCL.cmake  FindRCCL.cmake  FindSphinx.cmake
compilationHelpers/: CMakeListsComet.txt  setupFlux.sh
dftfeTrainingExamples/: settingsFile
docs/: CMakeLists.txt  Doxyfile.in  advanced.rst  conf.py  developing.rst  dftfe.rst  index.rst  installation.rst  kohnsham.rst  mechanics.rst  mk_params.py  params.rst  references.rst  running.rst
examples/: slurmdftfe
helpers/: CMakeListsCAEN.txt  CMakeListsFluxGCC.txt  CMakeListsFluxIntel.txt  CMakeListsFlux_intel.txt  READMENerscCori  convertCubit2UCD.py  p4est-setup.sh  parameterFile.prm  setupFluxGCC.sh  setupFluxIntel.sh  setupNerscCori.sh  setupNerscCoriKnl.sh  setupStampede2.sh
html/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8txt.html  all_electron_2non_periodic_2carbon_monoxide_2main_8cc.html  all_electron_2non_periodic_2carbon_single_atom_2main_8cc.html  all_electron_2non_periodic_2methane_2main_8cc.html  all_electron_2non_periodic_2silicon1x1x1_nano_cluster_2main_8cc.html  all_electron_2periodic_2simple_cubic_carbon_2main_8cc.html  annotated.html  boundary_8cc.html  boundaryball_8cc.html  charge_8cc.html  chebyshev_8bak_8cc.html  chebyshev_8cc.html  class_oneby_r_boundary_function-members.html  class_oneby_r_boundary_function.html  classdft_class-members.html  classdft_class.html  classeigen_class-members.html  classeigen_class.html  classes.html  classpoisson_class-members.html  classpoisson_class.html  create_bins_8cc.html  density_8cc.html  dft_8cc.html  dft_8h.html  dft_8h_source.html  dir_15eae51d97ec2470dc0f8d7f5f72a6f4.html  dir_1b660e66993f8fc34054a70e98080507.html  dir_27e3678f9130af660a538fa80b4b0591.html  dir_2a03dd6b352e4c2f126777a5bc1c9a58.html  dir_34d3de902711c979e110a29b9dd5e918.html  dir_412780a78749cf89cea73be889c14213.html  dir_4830ee38cf2bf4a48618e66e15003534.html  dir_4b5fc55359cff6429feb9feac625b588.html  dir_58cff6c152f4d1660dfe3531d0b87506.html  dir_591d60f67c52ab6f549d78a7654cb083.html  dir_594756d06151e0ad221d207fbcee5535.html  dir_5b5d511381553abae7bfaf2de0479f66.html  dir_5b79ca304f5467a4342b71db629a265f.html  (+304 more)
include/: BFGSNonLinearSolver.h  BLASWrapper.h  BLASWrapperClass.h  CompositeData.h  DataTypeOverloads.h  DeviceAPICalls.h  DeviceBlasWrapper.h  DeviceDataTypeOverloads.cu.h  DeviceDataTypeOverloads.h  DeviceDataTypeOverloads.hip.h  DeviceExceptions.cu.h  DeviceExceptions.hip.h  DeviceKernelLauncherConstants.cu.h  DeviceKernelLauncherConstants.h  DeviceKernelLauncherConstants.hip.h  DeviceTypeConfig.cu.h  DeviceTypeConfig.h  DeviceTypeConfig.hip.h  Exceptions.h  FEBasisOperations.h  FEBasisOperationsKernelsDevice.h  FEBasisOperationsKernelsInternal.h  FieldData.h  LBFGSNonLinearSolver.h  MDIEngine.h  MPICommunicatorP2P.h  MPICommunicatorP2PKernels.h  MPIPatternP2P.h  MPIRequestersBase.h  MPIRequestersNBX.h  MPITags.h  MPIWriteOnFile.h  MemoryManager.h  MemorySpaceType.h  MemoryStorage.h  MemoryTransfer.h  MemoryTransferKernelsDevice.h  MultiVector.h  NNGGA.h  NNLDA.h  (+134 more)
include2/: dft.h  eigen.h  poisson.h
includePetsc/: dft.h  eigen.h  headers.h
indent/: README  indent-with-vim.sh
indentationStandard/: README  compile_clang_format  download_clang_format  indent-all  indent_common.sh
pseudoConverters/: pseudoPotentialToDftfeConverter.cc  pseudoPotentialToDftfeConvertor.cc  upfToxml.cc  upfToxml.h
scrap/: ksdftMainOld.cc
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+120 more)
src/: apiTest.cc  dft.cc  dftfeWrapper.cc  eigen.cc  main.cc  poisson.cc  setupGPU.cu
utils/: BLASWrapper.t.cc  BLASWrapperClass.t.cc  BLASWrapperClassDevice.t.cu.cc  BLASWrapperClassDevice.t.hip.cc  BLASWrapperClassHost.t.cc  BLASWrapperDevice.cu.cc  BLASWrapperDevice.hip.cc  BLASWrapperDevice.t.cu.cc  BLASWrapperDevice.t.hip.cc  BLASWrapperDeviceKernels.cc  BLASWrapperHost.cc  BLASWrapperHost.t.cc  DeviceAPICalls.cu.cc  DeviceAPICalls.hip.cc  DeviceBlasWrapper.cu.cc  DeviceBlasWrapper.hip.cc  DeviceDirectCCLWrapper.cc  DeviceDirectCCLWrapperNCCL.cc  DeviceKernelsGeneric.cc  Exceptions.cc  Exceptions.t.cc  FEBasisOperations.cc  FEBasisOperations.t.cc  FEBasisOperationsDevice.cc  FEBasisOperationsDevice.t.cc  FEBasisOperationsHost.cc  FEBasisOperationsHost.t.cc  FEBasisOperationsHostKernels.cc  FEBasisOperationsKernels.cc  FEBasisOperationsKernelsDevice.cc  FEBasisOperationsKernelsInternalDevice.cc  FEBasisOperationsKernelsInternalHost.cc  MPICommunicatorP2P.cc  MPICommunicatorP2P.t.cc  MPICommunicatorP2PKernels.cc  MPIPatternP2P.cc  (+34 more)
(+2271 files in other folders)
